[project]
name = "memkit"
version = "0.0.2"
license = { text = "MIT" }
authors = [{ name = "0x01code", email = "admin@0x01code.com" }]
description = "Memkit is game hacking library for Direct Memory Access (DMA)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['memprocfs']

[project.urls]
Homepage = "https://github.com/0x01code/MemKit"
Issues = "https://github.com/0x01code/MemKit/issues"
